fix vertical scrollbars

--- a/themes/base/genomeview.css
+++ b/themes/base/genomeview.css
@@ -309,16 +309,21 @@ div.viewscale {
 
 .regionBrowserPane .dragWindow {
     position:absolute;
-    top: 45px;
     overflow: hidden;
     z-index: 1;
 }
 
-div.vertical_scrollbar {
-    width: 6px;
+.regionBrowserPane div.vertical_scrollbar {
+    position: absolute;
+    overflow: hidden;
+
+    width: 10px;
+    height: 100%;
+    right: 0;
     background: #eee;
     background: rgba(235, 235, 235, 0.62);
     border-left: 1px solid #DDD9D9;
+    z-index: 1000;
 }
 div.vertical_scrollbar .vertical_position_marker {
     background: #555;
